--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,5 @@
+^renv$
+^renv\.lock$
 ^dengue\.test\.Rproj$
 ^\.Rproj\.user$
 ^\.DS_Store$
@@ -12,3 +14,4 @@
 ^CODE_OF_CONDUCT\.md$
 ^README\.Rmd$
 ^README\.html$
+^CITATION\.cff$
