--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dengue.test
 Type: Package
-Title: The Title of the Project
+Title: My Reproducible Proyect
 Version: 0.0.0.9000
 Authors@R: c(
     person(given   = "Sebastian",
